--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,14 @@
     "configurations": [
         {
             "type": "java",
+            "name": "tournamentMaker",
+            "request": "launch",
+            "mainClass": "tournamentMaker",
+            "projectName": "SWEproject_231644f3"
+            
+        },
+        {
+            "type": "java",
             "name": "test",
             "request": "launch",
             "mainClass": "test",
@@ -51,7 +59,7 @@
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}",
-            "vmArgs": "--module-path lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path /Users/asus/Downloads/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
