--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -100,7 +100,8 @@
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}",
-            "vmArgs": "--module-path /Users/asus/Downloads/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path lib --add-modules javafx.controls,javafx.fxml",
+            
         }
     ]
 }
